Restoring deleted tests that were not restored during merge